--- a/css/css.html
+++ b/css/css.html
@@ -62,6 +62,7 @@
             </ul>
         </div>
         <!--正文 -->
+        <!--注意：margin-left:25%;padding:10px 16px，这就不会被左侧导航栏遮挡-->
         <div class="main-content" style="margin-left:25%;padding:10px 16px">
             <a class="anniu" href="http://www.baidu.com" target="_blank">这是一个像按钮的链接</a>
 
