--- a/jQuery/plugin.html
+++ b/jQuery/plugin.html
@@ -16,8 +16,8 @@
     <p>插件</p>
     <p id="test_fn_plugin_green">测试第二种插件：变绿</p>
     <p id="test_fn_plugin_change_text_style">测试第三种插件：带默认值的</p>
-    <button onclick="testToastAlert()">测试吐司</button>
-    <button onclick="testObjPlugin_ChangeTextStyle()">面向对象插件</button>
+    <button class="norm_button" onclick="testToastAlert()">测试吐司</button>
+    <button class="norm_button" onclick="testObjPlugin_ChangeTextStyle()">面向对象插件</button>
     <!--<div class="hz_alert">
       <div class="alert_mess">啊阿</div>
     </div>-->
