--- a/product/wangpan/html/index.html
+++ b/product/wangpan/html/index.html
@@ -18,73 +18,86 @@
     <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
 
     <!--toast_alert-->
-    <link rel="stylesheet" type="text/css" href="../plugin/toast_alert/css/toast_alert.css">
-    <script src="../plugin/toast_alert/js/toast_alert.js"></script>
-
-    <!--tabs-->
-    <link href="../css/tabs.css" rel="stylesheet" type="text/css" />
-    <script src="../js/tabs.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="../plugin/toast_alert/css/toast_alert.css">
+    <script src="../plugin/toast_alert/js/toast_alert.js"></script>-->
 
     <!--css-->
     <link href="../css/main.css" rel="stylesheet" type="text/css" />
     <link href="../css/app.css" rel="stylesheet" type="text/css" />
+
     <style type="text/css">
     </style>
 
 </head>
 
 <body>
-    <div class="notice">
-        <div class="notice-tit" id="notice-tit">
-            <ul>
-                <li class="select"><a href="#">登录</a></li>
-                <li><a href="#">注册</a></li>
-            </ul>
-        </div>
-        <div class="notice-con" id="notice-con">
-            <div class="show">
-                <form action="" method="post" style="position: relative; width: 300px;margin: 50px auto;">
-                    <label class="inputlabel" for="account">账号:</label>
-                    <input class="input" type="text" id=account name="account" value="" /><br />
-                    <label class="inputlabel" for="password">密码:</label>
-                    <input class="input" type="password" id=password name="password" value="" /><br />
-                    <label class="checklabel"><input type="checkbox" style="margin:10px" name="记住登录">记住登录</label>
-                    <br />
-                    <button id="login">确定</button>
-                    <input type="submit" style="display:none" id="loginSubmit" value="确定" /><br />
-                </form>
+    <div class="top">
+        <img style="height:60px;margin-left:10px" src="../images/logo.png" onclick="alert('hz网盘!!')" />
+    </div>
+    <div class="con">
+        <div class="con-left">
+            <div style="height:480px;width:100%">
+                <ul class="item-list">
+                    <li class="select"><a href="#"><i class="fa fa-files-o"></i> 全部文件</a></li>
+                    <li><a href="#"><i class="fa fa-file-text-o"></i> 文档</a></li>
+                    <li><a href="#"><i class="fa fa-photo"></i> 图片</a></li>
+                    <li><a href="#"><i class="fa fa-trash"></i> 回收站</a></li>
+                </ul>
             </div>
+            <div class="disk-size"></div>
+        </div>
+        <div class="con-right">
 
-            <div class="hide">
-                <!--TODO:解决label和input对齐的问题-->
-                <form action="" method="post" style="position: relative;width:400px;margin: 0 auto;">
-                    <label class="inputlabel" for="account">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号:</label>
-                    <input class="input" type="text" id=account name="account" value="" /><br />
-                    <label class="inputlabel" for="nickname">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp昵称:</label>
-                    <input class="input" type="text" id=nickname name="nickname" value="" /><br />
-                    <label class="inputlabel" for="password">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp密码:</label>
-                    <input class="input" type="password" id=password name="password" value="" /><br />
-                    <label class="inputlabel" for="passwordAgain">重输密码:</label>
-                    <input class="input" type="password" id=passwordAgain name="passwordAgain" value="" /><br />
-                    <button id="regist" style="margin-left:90px">确定</button>
-                    <input type="submit" style="display:none" id="registSubmit" value="确定" /><br />
-                </form>
+            <div class="operate">
+                <a href="#" id="uploadFile"><i class="fa fa-upload"></i> 上传</a>
+                <a href="#" id="newFolder"><i class="fa fa-plus"></i> 新建文件夹</a>
+            </div>
+            <p></p>
+            <div class="item-title">
+                <span style="display:block;text-align:left;float:left">全部文件</span>
+                <span style="display:block;text-align:left;float:left">(已选中0个)</span>
+                <span style="display:block;text-align:right;float:right">正在获取中...</span></div>
+            <div class="file-list">
+                <table id="file-list-table">
+                    <tr style="color: grey;">
+                        <th style="width:50%"><input type="checkbox"/>文件名</th>
+                        <th style="width:20%">大小</th>
+                        <th style="width:30%">修改时间</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="tbcol-1">
+                                <input type="checkbox"/>
+                                <i class="fa fa-folder-o"></i>
+                                <span>row 1, cell 1123133333333333333333333333333333333</span>
+                            </div>
+                        </td>
+                        <td>-</td>
+                        <td>2018-9-12</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="tbcol-1">
+                                <input type="checkbox"/>
+                                <i class="fa fa-folder-o"></i>
+                                <span>row 1, cell 1123133333333333333333333333333333333</span>
+                            </div>
+                        </td>
+                        <td>100KB</td>
+                        <td>2017-8-12</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
-    </div>
-
-
-    <div class="toast">
-        <div class="toast_text"></div>
-    </div>
-
-
 </body>
 <!--js-->
 <script src="../js/main.js"></script>
 <script>
 </script>
 <script src="../js/app.js"></script>
+
+<!--fontAwesome-->
+<link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
 </html>
